test keyboard issue on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 
 a {
